# UGC

./: Dockerfile  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml  mongo-setup.sh  pyproject.toml  requirements.txt  setup.cfg
deploy/: filebeat_api.yml  filebeat_nginx.yml  logstash.conf
diagrams/: as_is.puml  to_be.puml
docker_compose_files/mongodb/: cfg.yaml  mongos.yaml  shard_1.yaml  shard_2.yaml
research/: .env.example  Makefile  README.md  docker-compose.yml  models.py  mongo_check.py  mongo_generate.py  pg_check.py  pg_generate.py  requirements.txt  settings.py  utils.py
research/data/: data_helper.py  fake_data.py  other.py
research/mongo/: mongo_db.py
research/postgres/: postgres_db.py
research/postgres/errors/: __init__.py  db_error.py
research/postgres/script/: init.sql  sql_script.py
src/: main.py
src/api/: dependencies.py  healthcheck.py  paginator.py
src/api/v1/: appraisal.py  bookmark.py  review.py
src/core/: logger_setup.py  settings.py
src/db/: errors.py  mongo.py
src/models/: __init__.py  appraisal.py  base.py  bookmark.py  common.py  review.py
src/repos/: appraisal_repo.py  bookmark_repo.py  errors.py  review_repo.py
src/schemas/: appraisal_schema.py  bookmark_schema.py  review_schema.py
src/services/: __init__.py  errors.py  jwt_service.py
tests/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
tests/keys/: rsa.private  rsa.pub
tests/tests/: conftest.py  enums.py  settings.py
tests/tests/jwt_service/: __init__.py  jwt_service.py
tests/tests/src/: misc.py  test_appraisals.py  test_bookmark.py  test_review.py
